--- a/templates/add.html
+++ b/templates/add.html
@@ -49,7 +49,12 @@
                    name="tanggal" 
                    placeholder="Masukkan Tanggal" 
                    required>
-
+            <label for="nomor_surat">Nomor Surat:</label>
+            <input type="text" 
+                    id="'nomor_surat'" 
+                    name="nomor_surat" 
+                    placeholder="Masukkan Nomor Surat" 
+                    required>
 
             <div class="form-actions">
                 <button type="submit" class="btn primary">💾 Simpan</button>
