--- a/templates/edit.html
+++ b/templates/edit.html
@@ -49,6 +49,12 @@
                    placeholder="Masukkan Tanggal" 
                    required>
 
+            <label for="nomor_surat">Nomor Surat:</label>
+            <input type="text" 
+                   id="'nomor_surat'" 
+                   name="nomor_surat" 
+                   placeholder="Masukkan Nomor Surat" 
+                   required>
             
             <div class="form-actions">
                 <button type="submit" class="btn primary">💾 Update</button>
