--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
             <p>{{ b.pengirim }}</p>
             <p>{{ b.penerima }}</p>
             <p>{{ b.tanggal }}</p>
+            <p>{{ b.nomor_surat }}</p>
             <div class="card-actions">
                 <a href="{{ url_for('edit', id=b.id) }}"><button class="btn">Edit ✏️</button></a>
                 <a href="{{ url_for('delete', id=b.id) }}"><button class="btn danger">Hapus 🗑️</button></a>
