--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <h1 class="title">➕ Daftar Surat</h1>
     <div class="actions">
-        <a href="{{ url_for('add') }}"><button class="btn primary">➕ Tambah Buku</button></a>
+        <a href="{{ url_for('add') }}"><button class="btn primary">➕ Tambah Surat</button></a>
     </div>
     <br>
     <div class="card-list">
